--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
     <meta name="theme-color" content="%REACT_APP_META_THEME_COLOR%" />
     <meta name="description" content="%REACT_APP_META_DESCRIPTION%" />
+    <meta name="robots" content="noindex">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title><%= process.env.REACT_APP_META_TITLE %></title>
   </head>
